PR/46599: Onno van der Linden: Don't call bus space commands with 0 len. Causes the sil 3112 controller to lock up.